--- a/index.html
+++ b/index.html
@@ -112,9 +112,70 @@
       margin: 0 10px;
       cursor: pointer;
     }
+
+    /* 반응형 디자인 */
+    @media (max-width: 768px) {
+      header h1 {
+        font-size: 30px;
+      }
+      header p {
+        font-size: 16px;
+      }
+      main {
+        margin: 10px;
+        padding: 15px;
+        box-shadow: none;
+      }
+      section h2 {
+        font-size: 22px;
+      }
+      section p {
+        font-size: 14px;
+      }
+      .logo img {
+        width: 150px;
+      }
+      .links a {
+        font-size: 14px;
+        padding: 8px 12px;
+      }
+      .footer-icons a {
+        font-size: 20px;
+      }
+      footer p {
+        font-size: 12px;
+      }
+    }
+
+    @media (max-width: 480px) {
+      header h1 {
+        font-size: 24px;
+      }
+      main {
+        margin: 5px;
+        padding: 10px;
+      }
+      section h2 {
+        font-size: 20px;
+      }
+      section p {
+        font-size: 12px;
+      }
+      .logo img {
+        width: 120px;
+      }
+      .links a {
+        font-size: 12px;
+        padding: 6px 10px;
+      }
+      .footer-icons a {
+        font-size: 18px;
+      }
+      footer p {
+        font-size: 10px;
+      }
+    }
   </style>
-  <!-- FontAwesome for Icons -->
-  <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 </head>
 <body>
   <header>
@@ -139,7 +200,7 @@
     </section>
 
     <section>
-      <h2>🌟 Season 30 is comming! 🌟</h2>
+      <h2>🌟 Season 30 is coming! 🌟</h2>
       <p>마리 클랜은 30시즌에서 최고의 성과를 목표로 하고 있습니다. 지금 바로 합류하세요!</p>
     </section>
 
@@ -159,7 +220,7 @@
         22 | 86위 Bronze<br>
         23 | 62위 Silver<br>
         25 | 35위 Gold<br>
-        26 | n위 Gold<br>
+        26 | 27위 Gold<br>
         27 | (봉인)<br>
         28 | (봉인)<br>
         29 | (봉인)
